--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   height: 5.5ch;
   font-family: monospace;
   font-size: 13px;
+  color: #000000;
   background: #ffffff;
   border: 1px solid #767676;
   overflow: hidden;
@@ -18,7 +19,7 @@ span[data-lined-container] {
   border-color: #3b3b3b;
 }
 [data-lined-container]:focus-within {
-  outline: 2px solid;
+  outline: 2px solid #000000;
   outline-offset: -1px;
 }
 [data-lined-container] * {
@@ -49,6 +50,7 @@ span[data-lined-container] {
 [data-lined-container] textarea {
   padding: 0.5ch;
   flex-grow: 1;
+  color: inherit;
   background: transparent;
   border: none;
   border-radius: 0;
