Calculations Rewrite + Removed Automatic Installation
The number of rows in the textarea is now calculated by dividing the textarea's scrollHeight by it's text line height, instead of splitting the textarea's value on each instance of a newline character. The old implementation didn't run well when typing in a textarea with a large text value; 1000+ lines usually started to cause input delay and freezing frames.

This commit also removes the ability to install the plugin with one JavaScript file in favor of being more controllable by the person choosing to work with it. The primary way to install the plugin is now by linking to the style and script files individually, as well as wrapping the designated textareas to be numbered with a container on the client side instead of using the data-lined-automatic attribute which would wrap the textarea with a span element automatically. This is now meant to be handled by the developer rather than the plugin!

--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,38 @@
-[data-lined-container] {
+[data-numbered-container] {
   height: 5.5ch;
+  color: #000000;
   font-family: monospace;
   font-size: 13px;
-  color: #000000;
+  line-height: 1.2;
   background: #ffffff;
   border: 1px solid #767676;
   overflow: hidden;
   resize: both;
 }
-div[data-lined-container] {
+div[data-numbered-container] {
   display: flex;
 }
-span[data-lined-container] {
+span[data-numbered-container] {
   display: inline-flex;
   vertical-align: top;
 }
-[data-lined-container]:hover, [data-lined-container]:focus-within {
+[data-numbered-container]:hover, [data-numbered-container]:focus-within {
   border-color: #3b3b3b;
 }
-[data-lined-container]:focus-within {
+[data-numbered-container]:focus-within {
   outline: 2px solid #000000;
   outline-offset: -1px;
 }
-[data-lined-container] * {
+[data-numbered-container] * {
   font-family: inherit;
   font-size: inherit;
+  line-height: inherit;
 }
-[data-lined-container] ol {
+[data-numbered-container] ol {
   counter-reset: item;
   margin: 0;
   padding: 0.5ch;
+  flex-shrink: 0;
   color: #ffffff;
   text-align: right;
   background: #0000005e;
@@ -38,16 +41,16 @@ span[data-lined-container] {
   list-style: inside none;
   overflow: hidden;
 }
-[data-lined-container][data-lined-hidden] ol {
+[data-numbered-container][data-numbered-hidden] ol {
   padding: 0;
   width: 0;
   border-width: 0;
 }
-[data-lined-container] li::before {
+[data-numbered-container] li::before {
   content: counter(item);
   counter-increment: item;
 }
-[data-lined-container] textarea {
+[data-numbered-container] textarea {
   padding: 0.5ch;
   flex-grow: 1;
   color: inherit;
