Calculations Re-Rewrite
The last update appeared to actually make the issue worse than it was before the rewrite, so I went back to the original implementation with a few fixes that should help with a few more issues that could occur. Typing performance in textareas with 1000+ lines of text is still a sub-par experience for what I hope to achieve, so I hope I will be able to find a better performing method than how it currently functions.

--- a/styles.css
+++ b/styles.css
@@ -42,9 +42,7 @@ span[data-numbered-container] {
   overflow: hidden;
 }
 [data-numbered-container][data-numbered-hidden] ol {
-  padding: 0;
-  width: 0;
-  border-width: 0;
+  display: none;
 }
 [data-numbered-container] li::before {
   content: counter(item);
