--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ span[data-numbered-container] {
 }
 [data-numbered-container] textarea {
   padding: 0.5ch;
-  flex-grow: 1;
+  flex-basis: 100%;
   color: inherit;
   background: transparent;
   border: none;
