--- a/styles.css
+++ b/styles.css
@@ -9,30 +9,33 @@
   height: 60px;
   display: inline-block;
   vertical-align: bottom;
-  color: #000000;
+  --color: #000000;
+  color: var(--color);
   font-size: 13px;
   font-family: ui-monospace, "Cousine", "Consolas", monospace;
   line-height: 1.3;
-  background: #ffffff;
+  --background: #ffffff;
+  background: var(--background);
   border: 1px solid #808080;
   border-radius: 3px;
   overflow: hidden;
   cursor: text;
+  --scrollbar-backdrop: var(--background);
   user-select: none;
   -webkit-user-select: none;
   transition: 75ms;
-  transition-property: background, border-color, box-shadow;
+  transition-property: background-color, border-color, box-shadow;
 }
 :host(num-text:hover) {
   border-color: #3b3b3b;
 }
 :host(num-text:focus-within) {
-  background: #f1fbff;
+  --background: #f1fbff;
   border-color: #0050ff;
   box-shadow: 0 0 0 3px #8bd0e6ad;
 }
 :host(num-text[disabled]) {
-  background: #efefef;
+  --background: #efefef;
   border-color: #b0b0b0;
   opacity: 0.65;
   cursor: default;
@@ -71,7 +74,30 @@
 [part="line-number"]:last-child::after {
   content: "";
   display: block;
-  height: var(--overflow-offset,0px);
+  height: var(--overflow-offset-y,0px);
+}
+[part="content"] {
+  position: relative;
+  flex-basis: 100%;
+  display: flex;
+}
+[part="content"]::before, [part="content"]::after {
+  content: "";
+  position: absolute;
+  background: var(--scrollbar-backdrop);
+}
+[part="content"]::before {
+  right: 0;
+  top: 0;
+  width: var(--overflow-offset-x,0px);
+  height: 100%;
+  z-index: 1;
+}
+[part="content"]::after {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: var(--overflow-offset-y,0px);
 }
 [part="editor"] {
   padding: var(--padding);
@@ -86,10 +112,11 @@
   border: none;
   border-radius: 0;
   outline: none;
+  z-index: 1;
   -webkit-appearance: none;
 }
 [part="editor"]::placeholder {
-  color: inherit;
+  color: var(--color);
   opacity: 0.55;
   white-space: pre-wrap;
 }
