--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@
   vertical-align: bottom;
   --color: #000000;
   color: var(--color);
+  --selection-color: #0a0a0a;
+  --selection-background: #b4d5ffbf;
+  --selection-background-inactive: #ccccccbf;
   font-size: 13px;
   font-family: ui-monospace, "Cousine", "Consolas", monospace;
   line-height: 1.3;
@@ -33,6 +36,9 @@
   --background: #f1fbff;
   border-color: #0050ff;
   box-shadow: 0 0 0 3px #8bd0e6ad;
+}
+:host(num-text:-moz-window-inactive) {
+  --selection-background: var(--selection-background-inactive);
 }
 :host(num-text[disabled]) {
   --background: #efefef;
@@ -99,12 +105,26 @@
   width: 100%;
   height: var(--overflow-offset-y,0px);
 }
+[part="syntax"] {
+  padding-left: calc(var(--padding) + var(--overscroll-left,0px));
+  padding-right: calc(var(--padding) + var(--overflow-offset-x,0px) + var(--overscroll-right,0px));
+  padding-top: calc(var(--padding) + var(--overscroll-top,0px));
+  padding-bottom: calc(var(--padding) + var(--overflow-offset-y,0px) + var(--overscroll-bottom,0px));
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  font-family: inherit;
+  overflow: hidden;
+}
 [part="editor"] {
   padding: var(--padding);
   min-width: 4ch;
   min-height: 4ch;
   flex-basis: 100%;
-  color: inherit;
+  color: transparent;
+  caret-color: var(--color);
   font-size: inherit;
   font-family: inherit;
   line-height: inherit;
@@ -119,4 +139,11 @@
   color: var(--color);
   opacity: 0.55;
   white-space: pre-wrap;
+}
+[part="editor"]::selection {
+  color: var(--selection-color);
+  background: var(--selection-background);
+}
+[part="editor"]::selection:window-inactive {
+  background: var(--selection-background-inactive);
 }
