--- a/default-highlighting.css
+++ b/default-highlighting.css
@@ -1,31 +1,65 @@
-.token:is(.doctype,.comment) {/* HTML Doctype, Global comment */
+/* HTML Doctype, Global Comment */
+.token:is(.doctype,.comment) {
   opacity: 0.55;
 }
-.token:is(.tag) {/* HTML Tag */
-  color: #ff575a;
+/* HTML Tag, RegEx */
+.token:is(.tag,.regex) {
+  color: hsl(359,90%,48%);
 }
-.token:is(.punctuation) {/* Global punctuation */
+:host(.color-scheme-dark) .token:is(.tag,.regex) {
+  color: hsl(359,90%,68%);
+}
+/* Global Punctuation */
+.token:is(.punctuation) {
   color: var(--color);
-  opacity: 0.55;
-}
-.token:is(.attr-name,.selector,.number,.boolean) {/* HTML attr-name, CSS selector, Global number, Global boolean */
-  color: #f1ac4d;
-}
-.token:is(.property) {/* CSS property */
   opacity: 0.7;
 }
-.token:is(.attr-value,.string) {/* HTML attr-value, Global string */
-  color: #7eda79;
+/* HTML Attribute Name, CSS Selector, Global Number, Global Boolean */
+.token:is(.attr-name,.selector,.number,.boolean) {
+  color: hsl(35,80%,36%);
 }
-.token:is(.important) {/* CSS important */
-  color: #fbf760;
+:host(.color-scheme-dark) .token:is(.attr-name,.selector,.number,.boolean) {
+  color: hsl(35,80%,68%);
 }
-.token:is(.function) {/* CSS function, JS function */
-  color: #77bfff;
+/* CSS Property */
+.token:is(.property) {
+  color: hsl(180,37%,37%);
 }
-.token:is(.operator) {/* Global operator */
-  color: #60dcd1;
+:host(.color-scheme-dark) .token:is(.property) {
+  color: hsl(180,37%,68%);
 }
-.token:is(.atrule,.keyword) {/* CSS @rule, JS Keyword */
-  color: #bf7afd;
+/* HTML Attribute Value, Global String */
+.token:is(.attr-value,.string) {
+  color: hsl(117,47%,36%);
+}
+:host(.color-scheme-dark) .token:is(.attr-value,.string) {
+  color: hsl(117,47%,68%);
+}
+/* CSS Important */
+.token:is(.important) {
+  color: hsl(58,80%,27%);
+}
+:host(.color-scheme-dark) .token:is(.important) {
+  color: hsl(58,80%,68%);
+}
+/* CSS Function, JavaScript Function */
+.token:is(.function) {
+  color: hsl(208,78%,45%);
+}
+:host(.color-scheme-dark) .token:is(.function) {
+  color: hsl(208,78%,68%);
+}
+/* Global Operator */
+.token:is(.operator) {
+  color: hsl(175,54%,33%);
+}
+:host(.color-scheme-dark) .token:is(.operator) {
+  color: hsl(175,54%,68%);
+}
+/* CSS At Rule, JavaScript Keyword */
+.token:is(.atrule,.keyword) {
+  color: hsl(273,75%,50%);
+}
+:host(.color-scheme-dark) .token:is(.atrule,.keyword) {
+  color: hsl(273,75%,78%);
 }
