--- a/default-layout.css
+++ b/default-layout.css
@@ -1,50 +1,37 @@
-:host(num-text), *, *::before, *::after {
+:host, *, *::before, *::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-:host(num-text) {
-  --padding: 5px;
+:host {
+  --padding: 6px;
   position: relative;
-  height: 60px;
+  height: 80px;/*width: 300px;height: 500px;width: 500px;height: 225px;*/
   display: inline-block;
   vertical-align: bottom;
+  color-scheme: light;
   --color: #000000;
   color: var(--color);
-  --selection-color: #0a0a0a;
-  --selection-background: #b4d5ffbf;
-  --selection-background-inactive: #ccccccbf;
   font-size: 13px;
   font-family: ui-monospace, "Cousine", "Consolas", monospace;
-  line-height: 1.3;
-  --background: #ffffff;
-  background: var(--background);
-  border: 1px solid #808080;
-  border-radius: 3px;
+  line-height: 1.4;
+  --selection-color: inherit;
+  --selection-background: #75b1ff38;
+  --selection-background-inactive: #a1a1a138;
+  background: #ffffff;
   overflow: hidden;
   cursor: text;
-  --scrollbar-backdrop: var(--background);
   user-select: none;
   -webkit-user-select: none;
-  transition: 75ms;
-  transition-property: background-color, border-color, box-shadow;
+  -webkit-text-size-adjust: 100%;
 }
-:host(num-text:hover) {
-  border-color: #3b3b3b;
+:host(.color-scheme-dark) {
+  color-scheme: dark;
+  --color: #eaeaea;
+  background: #242424;
 }
-:host(num-text:focus-within) {
-  --background: #f1fbff;
-  border-color: #0050ff;
-  box-shadow: 0 0 0 3px #8bd0e6ad;
-}
-:host(num-text:-moz-window-inactive) {
+:host(:-moz-window-inactive) {
   --selection-background: var(--selection-background-inactive);
-}
-:host(num-text[disabled]) {
-  --background: #efefef;
-  border-color: #b0b0b0;
-  opacity: 0.65;
-  cursor: default;
 }
 [part="container"] {
   width: 100%;
@@ -62,7 +49,8 @@
 [part="line-number"]::before {
   content: counter(line-number);
   counter-increment: line-number;
-  padding: 0 calc(var(--padding) * 2);
+  --padding-multiplier: 2;
+  padding: 0 calc(var(--padding) * var(--padding-multiplier));
   display: block;
   text-align: right;
   opacity: 0.55;
@@ -84,48 +72,39 @@
 }
 [part="content"] {
   position: relative;
-  min-width: 4ch;
-  min-height: 4ch;
   flex-basis: 100%;
   display: flex;
   overflow: hidden;
 }
-[part="content"]::before, [part="content"]::after {
-  content: "";
-  position: absolute;
-  background: var(--scrollbar-backdrop);
-}
-[part="content"]::before {
-  right: 0;
-  top: 0;
-  width: var(--overflow-offset-x,0px);
-  height: 100%;
-  z-index: 1;
-}
-[part="content"]::after {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: var(--overflow-offset-y,0px);
-}
 [part="syntax"] {
-  padding-left: calc(var(--padding) + var(--overscroll-left,0px));
-  padding-right: calc(var(--padding) + var(--overflow-offset-x,0px) + var(--overscroll-right,0px));
-  padding-top: calc(var(--padding) + var(--overscroll-top,0px));
-  padding-bottom: calc(var(--padding) + var(--overflow-offset-y,0px) + var(--overscroll-bottom,0px));
+  padding: var(--padding);
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   font-family: inherit;
+  background-clip: padding-box;
+  border: 0 solid transparent;
+  border-right-width: var(--overflow-offset-x,0px);
+  border-bottom-width: var(--overflow-offset-y,0px);
   overflow: hidden;
+  transform: translate(calc(var(--overscroll-left,0px) + calc(var(--overscroll-right,0px) * -1)),calc(var(--overscroll-top,0px) + calc(var(--overscroll-bottom,0px) * -1)));
+}
+@supports (-moz-appearance: none) {
+  [part="syntax"] {
+    padding-left: 0;
+    border-left-width: var(--padding);
+    border-right-width: calc(var(--padding) + var(--overflow-offset-x,0px));
+  }
+}
+:host(:not([syntax-highlight])) [part="syntax"] {
+  display: none;
 }
 [part="editor"] {
   padding: var(--padding);
   flex-basis: 100%;
-  color: transparent;
-  caret-color: var(--color);
+  color: var(--color);
   font-size: inherit;
   font-family: inherit;
   line-height: inherit;
@@ -134,7 +113,14 @@
   border-radius: 0;
   outline: none;
   z-index: 1;
+  resize: none;
+  appearance: none;
   -webkit-appearance: none;
+}
+@supports not (-webkit-touch-callout: none) {
+  [part="editor"] {
+    caret-color: var(--color);
+  }
 }
 [part="editor"]::placeholder {
   color: var(--color);
@@ -147,4 +133,7 @@
 }
 [part="editor"]::selection:window-inactive {
   background: var(--selection-background-inactive);
+}
+:host([syntax-highlight]) [part="editor"] {
+  color: transparent;
 }
