Syntax Highlighting Styles + Theme Loading Revert
Additions:
- Scripting language class declarations now have a yellow text color! For example, when writing "class Name {}" or "new Name()" in JavaScript. This should work for other languages that use a similar class declaration syntax.
- HTML attribute equal sign punctuation will now be styled like the surrounding HTML tag "<" and ">" symbols.
- From the global NumText object, I re-added the update(), fetch(), and _tempBackwardsCompatibility_() functions. Check the next change listed below for more information.

Changes:
- Themes defined from a URL will once again use inline style tags. I did more testing since the last update, and it looks like preload tags will not prevent style flashes for applying themes after the initial page load. The theme loading behavior present before the last update is essentially brought back to how it was before.
- When loading themes using preload link tags, you should now use the "fetch" preload type, as well as the addition of the "crossorigin" attribute if your theme is from a different origin to where you are using NumText.
- Made NumText gutter line numbers a little more transparent so they will blend in less with the text content in the editor.

--- a/vanilla-highlighting.css
+++ b/vanilla-highlighting.css
@@ -34,13 +34,13 @@
   color: hsl(180,37%,68%);
 }
 /* HTML Attribute Value, Global String, HTML Attribute Value Punctuation */
-.token:is(.attr-value,.string), .token:is(.attr-value) .token.punctuation {
+.token:is(.attr-value,.string), .token:is(.attr-value) .token.punctuation:not(.attr-equals) {
   color: hsl(117,47%,36%);
 }
-.token:is(.attr-value) .token.punctuation {
+.token:is(.attr-value) .token.punctuation:not(.attr-equals) {
   opacity: 1;
 }
-:host(.color-scheme-dark) .token:is(.attr-value,.string), :host(.color-scheme-dark) .token:is(.attr-value) .token.punctuation {
+:host(.color-scheme-dark) .token:is(.attr-value,.string), :host(.color-scheme-dark) .token:is(.attr-value) .token.punctuation:not(.attr-equals) {
   color: hsl(117,47%,68%);
 }
 /* CSS Important */
@@ -56,6 +56,13 @@
 }
 :host(.color-scheme-dark) .token:is(.function) {
   color: hsl(208,78%,68%);
+}
+/* Global Class Name */
+.token:is(.class-name) {
+  color: hsl(45,80%,27%);
+}
+:host(.color-scheme-dark) .token:is(.class-name) {
+  color: hsl(45,80%,68%);
 }
 /* Global Operator */
 .token:is(.operator) {
