--- a/vanilla-layout.css
+++ b/vanilla-layout.css
@@ -83,7 +83,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  font-family: inherit;
+  font: inherit;
   background-clip: padding-box;
   border: 0 solid transparent;
   border-right-width: var(--overflow-offset-x,0px);
@@ -105,8 +105,7 @@
   padding: var(--padding);
   flex-basis: 100%;
   color: var(--color);
-  font-size: inherit;
-  font-family: inherit;
+  font: inherit;
   line-height: inherit;
   background: none;
   border: none;
