CSS Rule Selector Highlighting
Fixes:
- Addressed a highlighting issue for the CSS `@rule` selector syntax. Before the fix, the content section of the `@rule` selector wouldn't be the default text color for the editor, but instead the same color as the `@rule` selector itself.

An example in a `@media` query:
`@media (prefers-color-scheme: dark) {}`

The value "dark" would be colored purple like the `@media` selector, when it should be the default editor text color.

--- a/vanilla-highlighting.css
+++ b/vanilla-highlighting.css
@@ -71,10 +71,10 @@
 :host(.color-scheme-dark) .token:is(.operator) {
   color: hsl(175,54%,68%);
 }
-/* CSS At Rule, JavaScript Keyword */
-.token:is(.atrule,.keyword) {
+/* CSS Rule, JavaScript Keyword */
+.token:is(.rule,.keyword) {
   color: hsl(273,75%,50%);
 }
-:host(.color-scheme-dark) .token:is(.atrule,.keyword) {
+:host(.color-scheme-dark) .token:is(.rule,.keyword) {
   color: hsl(273,75%,78%);
 }
