Firefox Editor Min-Width
Fixes:
- Fixed an issue with editor sizing when the parent component gets too small. It looks like on Firefox textareas have a minimum width based on their content. In STE, file editors seemed to only go down to 171.35px while they should be able to shrink as small as the Split view scaler can go. All fixed now!

--- a/vanilla-layout.css
+++ b/vanilla-layout.css
@@ -103,6 +103,7 @@
 }
 [part="editor"] {
   padding: var(--padding);
+  min-width: 0;
   flex-basis: 100%;
   color: var(--color);
   font: inherit;
