--- a/styles.css
+++ b/styles.css
@@ -25,10 +25,35 @@
   user-select: none;
   -webkit-text-size-adjust: 100%;
 }
+:host {
+  border: 1px solid #808080;
+  border-radius: 3px;
+}
+:host(:where(:hover)) {
+  border-color: #3b3b3b;
+}
+:host(:where(:focus-within)) {
+  border-color: #195ae6;
+  box-shadow: 0 0 0 3px #4fd7ff6b;
+}
 :host(.color-scheme-dark) {
   color-scheme: dark;
   --color: #eaeaea;
   background: #242424;
+}
+:host(.color-scheme-dark:where(:hover)) {
+  border-color: #acacac;
+}
+:host(.color-scheme-dark:where(:focus-within)) {
+  border-color: #66b2d9;
+}
+:host(:where([disabled])) {
+  border-color: #b0b0b0;
+  opacity: 0.65;
+  cursor: default;
+}
+:host(:not(.color-scheme-dark):where([disabled])) {
+  background: #efefef;
 }
 :host(:-moz-window-inactive) {
   --selection-background: var(--selection-background-inactive);
@@ -76,6 +101,10 @@
   display: flex;
   overflow: hidden;
 }
+[part="content"] {
+  min-width: 4ch;
+  min-height: 4ch;
+}
 [part="syntax"] {
   padding: var(--padding);
   position: absolute;
@@ -116,6 +145,11 @@
   resize: none;
   -webkit-appearance: none;
   appearance: none;
+}
+[part="editor"] {
+  min-width: 4ch;
+  min-height: 4ch;
+  resize: both;
 }
 @supports not (-webkit-touch-callout: none) {
   [part="editor"] {
