--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,13 @@
 num-text {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-num-text {
-  --padding: 6px;
-  position: relative;
-  height: 80px;
-  display: inline-block;
+  display: inline-flex;
   vertical-align: bottom;
-  color-scheme: light;
-  --color: #000000;
-  color: var(--color);
+  color: FieldText;
   font-size: 13px;
   font-family: ui-monospace, "Cousine", "Consolas", monospace;
   line-height: 1.4;
-  background: #ffffff;
+  background: Field;
+  border: 1px solid #808080;
+  border-radius: 3px;
   overflow: hidden;
   cursor: text;
   -webkit-user-select: none;
@@ -23,87 +15,52 @@ num-text {
   -webkit-text-size-adjust: 100%;
 }
 num-text {
-  border: 1px solid #808080;
-  border-radius: 3px;
+  --padding: 6px;
 }
-num-text::part(container) {
-  width: 100%;
-  height: 100%;
-  display: flex;
-}
-num-text::part(gutter) {
-  counter-reset: line-number;
+num-text ol {
+  counter-reset: line;
   margin: 0;
   padding: 0;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
-  list-style: inside none;
+  list-style-position: inside;
+  list-style-type: none;
+  text-align: right;
   overflow: hidden;
 }
-num-text::part(line-number)::before {
-  content: counter(line-number);
-  counter-increment: line-number;
-  --padding-multiplier: 2;
-  padding: 0 calc(var(--padding) * var(--padding-multiplier));
-  display: block;
-  text-align: right;
+num-text li {
+  padding-inline: calc(var(--padding) * 2);
+}
+num-text li::before {
+  content: counter(line);
+  counter-increment: line;
   opacity: 0.45;
 }
-num-text::part(line-number):first-child::before {
+num-text li:first-child {
   padding-top: calc(var(--padding) + var(--overscroll-top,0px));
 }
-num-text::part(line-number):last-child {
+num-text li:last-child {
+  padding-bottom: calc(var(--padding) + var(--overscroll-bottom,0px));
   flex-basis: 100%;
 }
-num-text::part(line-number):last-child::before {
-  padding-bottom: calc(var(--padding) + var(--overscroll-bottom,0px));
-  height: 100%;
-}
-num-text::part(line-number):last-child::after {
+num-text li:last-child::after {
   content: "";
   display: block;
   height: var(--overflow-offset-y,0px);
 }
-num-text::part(content) {
-  position: relative;
-  flex-basis: 100%;
-  display: flex;
-  overflow: hidden;
-}
-num-text::part(content) {
+num-text textarea {
+  padding: var(--padding);
   min-width: 4ch;
   min-height: 4ch;
-}
-num-text::part(editor) {
-  padding: var(--padding);
-  box-sizing: border-box;
-  min-width: 0;
-  flex-basis: 100%;
-  color: var(--color);
+  width: 20ch;
+  height: 8ch;
+  color: inherit;
   font: inherit;
-  line-height: inherit;
   background: none;
   border: none;
   border-radius: 0;
   outline: none;
-  z-index: 1;
-  resize: none;
   -webkit-appearance: none;
   appearance: none;
-}
-num-text::part(editor) {
-  min-width: 4ch;
-  min-height: 4ch;
-  resize: both;
-}
-@supports not (-webkit-touch-callout: none) {
-  num-text::part(editor) {
-    caret-color: var(--color);
-  }
-}
-num-text::part(editor)::placeholder {
-  color: var(--color);
-  opacity: 0.55;
-  white-space: pre-wrap;
 }
