--- a/styles/vanilla-layout.css
+++ b/styles/vanilla-layout.css
@@ -3,10 +3,11 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 :host {
   --padding: 6px;
   position: relative;
-  height: 80px;/*width: 300px;height: 500px;width: 500px;height: 225px;*/
+  height: 80px;
   display: inline-block;
   vertical-align: bottom;
   color-scheme: light;
@@ -25,19 +26,23 @@
   user-select: none;
   -webkit-text-size-adjust: 100%;
 }
+
 :host(.color-scheme-dark) {
   color-scheme: dark;
   --color: #eaeaea;
   background: #242424;
 }
+
 :host(:-moz-window-inactive) {
   --selection-background: var(--selection-background-inactive);
 }
+
 [part="container"] {
   width: 100%;
   height: 100%;
   display: flex;
 }
+
 [part="gutter"] {
   counter-reset: line-number;
   flex-shrink: 0;
@@ -46,6 +51,7 @@
   list-style: inside none;
   overflow: hidden;
 }
+
 [part="line-number"]::before {
   content: counter(line-number);
   counter-increment: line-number;
@@ -55,27 +61,33 @@
   text-align: right;
   opacity: 0.45;
 }
+
 [part="line-number"]:first-child::before {
   padding-top: calc(var(--padding) + var(--overscroll-top,0px));
 }
+
 [part="line-number"]:last-child {
   flex-basis: 100%;
 }
+
 [part="line-number"]:last-child::before {
   padding-bottom: calc(var(--padding) + var(--overscroll-bottom,0px));
   height: 100%;
 }
+
 [part="line-number"]:last-child::after {
   content: "";
   display: block;
   height: var(--overflow-offset-y,0px);
 }
+
 [part="content"] {
   position: relative;
   flex-basis: 100%;
   display: flex;
   overflow: hidden;
 }
+
 [part="syntax"] {
   padding: var(--padding);
   position: absolute;
@@ -91,6 +103,7 @@
   overflow: hidden;
   transform: translate(calc(var(--overscroll-left,0px) + calc(var(--overscroll-right,0px) * -1)),calc(var(--overscroll-top,0px) + calc(var(--overscroll-bottom,0px) * -1)));
 }
+
 @supports (-moz-appearance: none) {
   [part="syntax"] {
     padding-left: 0;
@@ -98,9 +111,11 @@
     border-right-width: calc(var(--padding) + var(--overflow-offset-x,0px));
   }
 }
+
 :host(:not([syntax-highlight])) [part="syntax"] {
   display: none;
 }
+
 [part="editor"] {
   padding: var(--padding);
   min-width: 0;
@@ -117,23 +132,28 @@
   -webkit-appearance: none;
   appearance: none;
 }
+
 @supports not (-webkit-touch-callout: none) {
   [part="editor"] {
     caret-color: var(--color);
   }
 }
+
 [part="editor"]::placeholder {
   color: var(--color);
   opacity: 0.55;
   white-space: pre-wrap;
 }
+
 [part="editor"]::selection {
   color: var(--selection-color);
   background: var(--selection-background);
 }
+
 [part="editor"]::selection:window-inactive {
   background: var(--selection-background-inactive);
 }
+
 :host([syntax-highlight]) [part="editor"] {
   color: transparent;
 }
