--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,7 @@
   border-radius: 3px;
   overflow: hidden;
   cursor: text;
+  --resize: both;
   -webkit-user-select: none;
   user-select: none;
   -webkit-text-size-adjust: 100%;
@@ -72,7 +73,10 @@ textarea {
   background: none;
   border: none;
   border-radius: 0;
+  scrollbar-width: inherit;
+  scrollbar-color: inherit;
   outline: none;
+  resize: var(--resize);
   -webkit-appearance: none;
   appearance: none;
 }
